facilgo/templates/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: naveenkoppala.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facilgo-api-srv
                port:
                  number: 80
